--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -24,31 +24,32 @@
     - [5.1. 设计模式](#51-设计模式)
     - [5.2. 采用位掩码减少类的个数](#52-采用位掩码减少类的个数)
         - [5.2.1. 位掩码](#521-位掩码)
-        - [替代多态](#替代多态)
-        - [替代多态枚举](#替代多态枚举)
-- [第 9 章 编程习惯的改进](#第-9-章-编程习惯的改进)
-    - [结构方面的改进](#结构方面的改进)
-        - [缩短长判定](#缩短长判定)
-        - [缩短长分支](#缩短长分支)
-        - [减少参数个数](#减少参数个数)
-        - [减少嵌套的层数](#减少嵌套的层数)
-    - [分离暧昧关系](#分离暧昧关系)
-        - [循环引用](#循环引用)
-        - [间接继承](#间接继承)
-    - [多维度变化](#多维度变化)
-    - [自相似对象](#自相似对象)
-    - [同质化处理](#同质化处理)
-        - [模板方法模式](#模板方法模式)
-        - [更灵活的模板方法](#更灵活的模板方法)
-    - [架构方面的改进](#架构方面的改进)
-        - [包含关系](#包含关系)
-        - [继承关系](#继承关系)
-        - [有限取值范围](#有限取值范围)
-            - [多态](#多态)
-            - [享元模式](#享元模式)
-- [6. 其他](#6-其他)
-    - [6.1. 随机提供器](#61-随机提供器)
-    - [在旧代码基础上扩展类似功能](#在旧代码基础上扩展类似功能)
+        - [5.2.2. 替代多态](#522-替代多态)
+        - [5.2.3. 替代多态枚举](#523-替代多态枚举)
+- [6. 第 9 章 编程习惯的改进](#6-第-9-章-编程习惯的改进)
+    - [6.1. 结构方面的改进](#61-结构方面的改进)
+        - [6.1.4. 缩短长判定](#614-缩短长判定)
+        - [6.1.5. 缩短长分支](#615-缩短长分支)
+        - [6.1.6. 减少参数个数](#616-减少参数个数)
+        - [6.1.7. 减少嵌套的层数](#617-减少嵌套的层数)
+    - [6.2. 分离暧昧关系](#62-分离暧昧关系)
+        - [6.2.1. 循环引用](#621-循环引用)
+        - [6.2.2. 间接继承](#622-间接继承)
+    - [6.3. 多维度变化](#63-多维度变化)
+    - [6.4. 自相似对象](#64-自相似对象)
+    - [6.5. 同质化处理](#65-同质化处理)
+        - [6.5.1. 模板方法模式](#651-模板方法模式)
+        - [6.5.2. 更灵活的模板方法](#652-更灵活的模板方法)
+    - [6.6. 架构方面的改进](#66-架构方面的改进)
+        - [6.6.1. 包含关系](#661-包含关系)
+        - [6.6.2. 继承关系](#662-继承关系)
+        - [6.6.3. 有限取值范围](#663-有限取值范围)
+            - [6.6.3.1. 多态](#6631-多态)
+            - [6.6.3.2. 享元模式](#6632-享元模式)
+- [7. 其他](#7-其他)
+    - [7.1. 随机提供器](#71-随机提供器)
+    - [7.2. 在旧代码基础上扩展类似功能](#72-在旧代码基础上扩展类似功能)
+    - [7.3. 优雅的优化5个以上的if语句](#73-优雅的优化5个以上的if语句)
 
 <!-- /TOC -->
 # 1. 前言
@@ -797,15 +798,15 @@ public static final int SHAPE_ELLIPSE = 0x080;
 判定颜色是否为绿色, 则用if(object & COLOR_GREEN == COLOR_GREEN){}
 
 
-### 替代多态
+### 5.2.2. 替代多态
 
-有时采用多态会产生大量的类,而采用位掩码则可以在一个类中完成等价的操作.
+有时采用多态会产生大量的类,而采用位掩码则可以在一个类中完成等价的操作.
 
 例如文本框的输入限制,文本框可以输入数字,电子邮件,电话号码,密码,时间,邮政地址,姓名,姓名拼写等不同内容.每种类型有涉及是否自动大小写.数字还涉及是否允许输入小数,是否允许输入符号.
 
-试想一下,需要多少个类才能表征这些不同的状态?
+试想一下,需要多少个类才能表征这些不同的状态?
 
-下面是一些简单的尝试:
+下面是一些简单的尝试:
 
 ```java
 
@@ -858,14 +859,14 @@ public static final int SHAPE_ELLIPSE = 0x080;
 ```
 
 
-这样,只需一个类就可以实现该功能,并且由于许可长度足够长,还具有充分的可扩展性.Android的文本框属性就是采用这种方法设计的.实际上它支持的属性非常多,实现上也要比这个模型复杂得多.
+这样,只需一个类就可以实现该功能,并且由于许可长度足够长,还具有充分的可扩展性.Android的文本框属性就是采用这种方法设计的.实际上它支持的属性非常多,实现上也要比这个模型复杂得多.
 
-同样,对于一个窗口来说,有标题栏,最大化按钮,最小化按钮,关闭按钮,图标,窗体外框,状态栏,工具栏,菜单栏等多种属性,也可以用位掩码的方式来实现.
+同样,对于一个窗口来说,有标题栏,最大化按钮,最小化按钮,关闭按钮,图标,窗体外框,状态栏,工具栏,菜单栏等多种属性,也可以用位掩码的方式来实现.
 
 
-### 替代多态枚举
+### 5.2.3. 替代多态枚举
 
-有时候常量定义采用枚举,但是采用枚举之后的常量如果需要并列时,就要通过`||` 符号或者数组来定义,这会增加代码的长度以及判定的复杂度.例如:
+有时候常量定义采用枚举,但是采用枚举之后的常量如果需要并列时,就要通过`||` 符号或者数组来定义,这会增加代码的长度以及判定的复杂度.例如:
 
 ```java
    public enum Authority{
@@ -921,18 +922,18 @@ public static final int SHAPE_ELLIPSE = 0x080;
 
 相对来说,最后一种写法最为简练.
 
-# 第 9 章 编程习惯的改进
+# 6. 第 9 章 编程习惯的改进
 
-## 结构方面的改进
+## 6.1. 结构方面的改进
 
-### 缩短长判定
+### 6.1.4. 缩短长判定
 
 3. 去掉null判定 
 
 很多时候,为了避免发生NullPointException,需要对对象进行非空判定.
 然后,如果利用了空对象模式,这个判定就没有必要了.
 
-例如: 在Android输入法中,当键盘启动时,处在一个不需要现实键盘的页面时,keyboard对象为空, 那么对于所有键盘的处理位置,都需要增加下面的判定
+例如: 在Android输入法中,当键盘启动时,处在一个不需要现实键盘的页面时,keyboard对象为空, 那么对于所有键盘的处理位置,都需要增加下面的判定
 
 ```java
 if (keyboard == null){
@@ -950,7 +951,7 @@ public class InputMethod extends InputMethodService{
     public void onCreate(){
         //根据情况,将mKeyboard初始化为SoftKeyBoard
         //或者HardKeyBoard实例,有时也不会生成
-        //比如在插入硬盘启动到一个不可以输入的页面时
+        //比如在插入硬盘启动到一个不可以输入的页面时
         
     }
 
@@ -962,7 +963,7 @@ public class InputMethod extends InputMethodService{
 }
 ```
 
-但是,如果在初始化键盘时,根据情况将键盘生成为SoftKeyboard,HardKeyboard或者InvisibleKeyboard,则在调用键盘时就不必判定键盘是否为空.
+但是,如果在初始化键盘时,根据情况将键盘生成为SoftKeyboard,HardKeyboard或者InvisibleKeyboard,则在调用键盘时就不必判定键盘是否为空.
 
 ```java
 public class MyInputMethod extends InputMethodService{
@@ -1008,7 +1009,7 @@ public class InvisibleKeyboard implements Keyboard{
 4. 状态模式 -- 减少判定的次数
 
 
-对于复杂的判定条件,如何才能减少判定的层数呢?下面介绍一下状态模式.例如在输入程序中,根据候补显示状态的不同,按下返回键的处理也不同.
+对于复杂的判定条件,如何才能减少判定的层数呢?下面介绍一下状态模式.例如在输入程序中,根据候补显示状态的不同,按下返回键的处理也不同.
 
 ```java
 public class Candidate{
@@ -1075,7 +1076,7 @@ public class FullScreen implements Candidate.State{
 public class Closed implements Candidate.State{
     public State onKeyBack(){
         MyInputMethod.getInstance().hideWindow(); // 关闭输入法
-        return this;
+        return this;
     }
 }
 
@@ -1084,7 +1085,7 @@ public class Closed implements Candidate.State{
 这样, 原本需要长分支才能够处理的onKeyDown中的BACK按键处理,分散到各个状态类中实现, 则onKeyDown方法中的BACK 按键处理变成了一句话.
 
 
-### 缩短长分支
+### 6.1.5. 缩短长分支
 
 2. 策略模式
 
@@ -1125,7 +1126,7 @@ public ChannelKeyProcessor implements KeyProcessor{
 
 以此类推
 
-这时, 在主体程序中, 根据按键的类型不同,采用不同的处理器进行按键处理,这样主体程序中的按键处理就会大幅度缩短.
+这时, 在主体程序中, 根据按键的类型不同,采用不同的处理器进行按键处理,这样主体程序中的按键处理就会大幅度缩短.
 
 ```java
 public class HardKeyboard{
@@ -1147,7 +1148,7 @@ public class HardKeyboard{
 }
 ```
 
-实现主体代码之后, 在KeyProcesscorFactory中根据输入的KeyCode来生成对应的KeyProcessor对象.如果直接按照按键进行switch-case, 那么只是将代码复杂的问题转移了,并没有解决问题.
+实现主体代码之后, 在KeyProcesscorFactory中根据输入的KeyCode来生成对应的KeyProcessor对象.如果直接按照按键进行switch-case, 那么只是将代码复杂的问题转移了,并没有解决问题.
 
 ```java
 
@@ -1221,9 +1222,9 @@ public boolean hasMore(){
 }
 ```
 
-像这样, 可以通过用表达式代替变量的方式, 来减少一次判定.
+像这样, 可以通过用表达式代替变量的方式, 来减少一次判定.
 
-### 减少参数个数
+### 6.1.6. 减少参数个数
 
 参数个数过多会导致: 1. 代码变复杂,受影响范围变大 2. 可读性降低,需要记忆各个参数
 
@@ -1268,20 +1269,20 @@ public class Calculator{
 
 ```
 
-其中, x,y,color 都可以提取为成员变量, 那么新的形式就是:
+其中, x,y,color 都可以提取为成员变量, 那么新的形式就是:
 
 ```java
 public class Ball{
     int x, y, color;
 
-    public void markHomeNeighbors(){
+    public void markHomeNeighbors(){
         
     }
 }
 
 ```
 
-### 减少嵌套的层数
+### 6.1.7. 减少嵌套的层数
 
 嵌套层数越多,代码越复杂, 其全部的复杂度也就可能越高.因此控制嵌套层数是降低Bug发生概率的一个有效手段
 
@@ -1366,7 +1367,7 @@ for (int i = 0;i < list.size(); i++){
 ```
 
 这样修改,就不会因为嵌套而导致换行等问题.
-和提取方法一样,提前判定并没有改变代码本质上的复杂度.
+和提取方法一样,提前判定并没有改变代码本质上的复杂度.
 
 3. 用whild代替for
 
@@ -1407,12 +1408,12 @@ public void searchNew(){
 }
 ```
 
-这个是真正降低嵌套层数的做法
+这个是真正降低嵌套层数的做法
 
 
 2. 提取全局变量
 
-当有的参数被调用的次数过多时, 可以考虑将该参数作为全局变量来使用.例如:
+当有的参数被调用的次数过多时, 可以考虑将该参数作为全局变量来使用.例如:
 ```java
 public class Ball{
     public void markHomeNeighbors(int x, int y, int color){
@@ -1424,40 +1425,40 @@ public class Ball{
 
 
 
-## 分离暧昧关系
+## 6.2. 分离暧昧关系
 
 两个对象之间的关系过于暧昧和纠缠不清,就会引起代码的耦合度增高.为了降低耦合度,要尽量分离暧昧关系.
 
-### 循环引用
+### 6.2.1. 循环引用
 
-Aa.b和Bb.a同时存在,不知道到底谁包含了谁,之所以发生这种情况是因为除了原本正确的A包含B的关系之外,B中的若干地方还打算调用A中的某个属性或者方法,所以就把A作为B的成员变量引入.
+Aa.b和Bb.a同时存在,不知道到底谁包含了谁,之所以发生这种情况是因为除了原本正确的A包含B的关系之外,B中的若干地方还打算调用A中的某个属性或者方法,所以就把A作为B的成员变量引入.
 拆离循环引用的方法有两种:
 
 **方法1 单例模式**
 
-让A单例,那么B如果要调用A,就可以通过获得A的实例的方法来调用A的方法.例如A.getInstance().xxx()
+让A单例,那么B如果要调用A,就可以通过获得A的实例的方法来调用A的方法.例如A.getInstance().xxx()
 
 
 **方法2 引入中间人**
 
-a. 命令模式(事件驱动机制)
+a. 命令模式(事件驱动机制)
 
 引入中间类C,当B有任何需要调用A时,通过C发送一个消息;当A有任何需要调用B的处理时,也通过C发送一个消息.
 
 b. 调停者模式
 
-引入中间类C,把A作为C的一个成员变量,而C作为单例模式存在.那么想要引用A时应该这样调用C.getInstance().a.xxx();这样做是因为A受到其他制约,不适合作为单例模式出现,同样,C作为一个公共调停者,不仅仅为A作容器,他也可能为其他内容作容器.在实际例子当中,对于全局的设定可能就是这样一个类.
+引入中间类C,把A作为C的一个成员变量,而C作为单例模式存在.那么想要引用A时应该这样调用C.getInstance().a.xxx();这样做是因为A受到其他制约,不适合作为单例模式出现,同样,C作为一个公共调停者,不仅仅为A作容器,他也可能为其他内容作容器.在实际例子当中,对于全局的设定可能就是这样一个类.
 
-### 间接继承
+### 6.2.2. 间接继承
 
-A->B->C 的继承关系: C突然要调用一个被B重载了的方法,但是并没有super.super这种调用方法,这是重载错误造成的问题,之所以C打算调用A的某个方法,而不是B中那个重载了的方法,是因为B中重载的方法的作用范围超出了C的预期,B中的方法违背的单一职责原则,所以需要修改B中的重载.如果实在无法修改B中的重载,那么可以在B中增加一个引桥callSuper()来调用C中想要调用的A的方法,然后在C中调用callSuper();遇到这种情况旺旺意味着设计上出现问题了.
+A->B->C 的继承关系: C突然要调用一个被B重载了的方法,但是并没有super.super这种调用方法,这是重载错误造成的问题,之所以C打算调用A的某个方法,而不是B中那个重载了的方法,是因为B中重载的方法的作用范围超出了C的预期,B中的方法违背的单一职责原则,所以需要修改B中的重载.如果实在无法修改B中的重载,那么可以在B中增加一个引桥callSuper()来调用C中想要调用的A的方法,然后在C中调用callSuper();遇到这种情况旺旺意味着设计上出现问题了.
 
-## 多维度变化
+## 6.3. 多维度变化
 
 在一些系统中系统会有若干个维度的变量来表示系统的状态.当这些变量组合在一起时它们所形成的各种可能性为`m*n*......`将是一个很大的网格.如果将这些组合放在同一个类中,那么对于当前条件所产生的判定条件会非常多.
 
 例如,在一个智能设备上的输入法可能有如下组合条件
-- 输入设备:软键盘,硬键盘,游戏手柄,遥控器  (4种条件)
+- 输入设备:软键盘,硬键盘,游戏手柄,遥控器  (4种条件)
 - 语言:拼音,务必,全角英文,半角英文,数字   (5种条件)
 - 键盘模式:12键,50键,QWERTY键盘        (4种条件)
 - 候补模式:无,一行,多行;               (3种条件)
@@ -1492,9 +1493,9 @@ public class InputMethod{
 
 在这里我们将各个维度的属性按照顺序一层包装一层.这样,当各个维度发生变化时,所产生的变化情形为 `m + n + ......`,这种方式叫做桥接模式.
 
-## 自相似对象
+## 6.4. 自相似对象
 
-一般来说, 在省,市,区这种行政单位结构,部门组织结构或者商品目录的属性结构里,每个节点都具有相似性.我们把这种节点具有相似性的结构称为自相似对象.对于自相似对象,可以采用组合者模式进行处理.
+一般来说, 在省,市,区这种行政单位结构,部门组织结构或者商品目录的属性结构里,每个节点都具有相似性.我们把这种节点具有相似性的结构称为自相似对象.对于自相似对象,可以采用组合者模式进行处理.
 
 例如, 要列出一个国家的所有的城市名称,可以通过下列方式进行:
 
@@ -1509,7 +1510,7 @@ public abstract calss Place{
         System.out.println(name);
     }
 
-    public void listAll(){
+    public void listAll(){
         output();
         for (Place place : subPlaces){
             subPlaces.output();
@@ -1532,7 +1533,7 @@ public class Province extends Place{
 
 这样, 制作一个联动下拉列表框是只要指明每个框所对应的类即可,这种方法叫做组合这模式.
 
-同样,制作一个工资公式编辑器是,可以采用自相似表达式数来完成.
+同样,制作一个工资公式编辑器是,可以采用自相似表达式数来完成.
 
 ```java
 
@@ -1554,9 +1555,9 @@ public class Node{
 这样只要构建了二叉树结构的表达数,就可以通过上述结构针对每个员工来计算工资了.
 
 
-## 同质化处理
+## 6.5. 同质化处理
 
-### 模板方法模式
+### 6.5.1. 模板方法模式
 
 当所有类都采用相同的行为顺序时,可以通过使用模板方法将相同的部分提出到父类,而在各个子类中实现其不同的部分即可.
 
@@ -1580,7 +1581,7 @@ public class Node{
     }
 ```
 
-### 更灵活的模板方法
+### 6.5.2. 更灵活的模板方法
 上述模板方法对于每次调用的方法名称都进行了规定,**但是当每个子类需要调用的方法名称不相同时,上述方法就无法完成相应的工作**.这是可以采用Annotation.
 
 例如,在JUnit中的每个测试方法名称都不一样,但是只要写上@Test就会被当成测试代码调用
@@ -1638,9 +1639,9 @@ public class Node{
 
 当有多个Before和多个After时可以为Before 和After增加priority属性.注: 上述实现Before的方法只能是无参数的方法.
 
-## 架构方面的改进
+## 6.6. 架构方面的改进
 
-### 包含关系
+### 6.6.1. 包含关系
 
 对于一个问卷来说,上面有很多问题
 
@@ -1651,7 +1652,7 @@ class Questionnaire{
 
 ```
 
-对于一个问题来说包含题干和4个候选答案,那么问题的定义就是这样的.
+对于一个问题来说包含题干和4个候选答案,那么问题的定义就是这样的.
 ```java
 class Question{
     public String body;
@@ -1660,11 +1661,11 @@ class Question{
 
 ```
 
-### 继承关系
+### 6.6.2. 继承关系
 
-对于有共性的事物可以抽出其公用接口以方便实现扩展
+对于有共性的事物可以抽出其公用接口以方便实现扩展
 
-例如:智能设备的输入法程序中的输入设备有硬键盘,软键盘,游戏手柄,遥控器.如果设置为标志位,那么判定条件将变得复杂,而如果将其抽象为InputDevice接口,然后根据实际接入的设备生成具体的对象,那么对于输入法本身来说就不必关心目前到底接入的是什么设备以及未来可能接入什么样的新设备.
+例如:智能设备的输入法程序中的输入设备有硬键盘,软键盘,游戏手柄,遥控器.如果设置为标志位,那么判定条件将变得复杂,而如果将其抽象为InputDevice接口,然后根据实际接入的设备生成具体的对象,那么对于输入法本身来说就不必关心目前到底接入的是什么设备以及未来可能接入什么样的新设备.
 
 > 面向接口编程(InputDevice)
 
@@ -1682,13 +1683,13 @@ public abstract class Place{
 那么增加一个街道的现实大概只需要不到10行代码.(在HTML中只需要两行代码就可以增加一个新下拉框的代码)
 
 
-### 有限取值范围
+### 6.6.3. 有限取值范围
 
-#### 多态
+#### 6.6.3.1. 多态
 
 枚举中可以定义方法, 一样可以实现多态
 
-> java8 中支持更多种写法
+> java8 中支持更多种写法
 
 ```java
  public class TrafficLight{
@@ -1729,7 +1730,7 @@ public abstract class Place{
 
 ```
 
-在各种状态下分别定义自己的行为,则会让代码的复杂度降低,代码的长度变短,从而提高可读性.这种写法彻底消除了[恼人的default](#222-莫名其妙的default)
+在各种状态下分别定义自己的行为,则会让代码的复杂度降低,代码的长度变短,从而提高可读性.这种写法彻底消除了[恼人的default](#222-莫名其妙的default)
 
 
 综上所述,可以看出,枚举有以下特点:
@@ -1737,13 +1738,13 @@ public abstract class Place{
 - 更容易理解
 - 限制取值范围
 - 可以扩展属性
-- 容易扩展新值
+- 容易扩展新值
 
 
-#### 享元模式
+#### 6.6.3.2. 享元模式
 
-对于需要实现较多的方法的情形,采用枚举会导致代码变得很长.那么就需要采用另外一种形式的有限值列表了,这就是享元模式.
-    将所有的可能取值放在同一个勒种叫做享元模式,这样每次访问时都只是从同一个位置取值,确保取值的唯一性和确定性.例如,下面是一个在不同语言模式下,输入法将输入文字转换为对应的本地文字的例子:
+对于需要实现较多的方法的情形,采用枚举会导致代码变得很长.那么就需要采用另外一种形式的有限值列表了,这就是享元模式.
+    将所有的可能取值放在同一个勒种叫做享元模式,这样每次访问时都只是从同一个位置取值,确保取值的唯一性和确定性.例如,下面是一个在不同语言模式下,输入法将输入文字转换为对应的本地文字的例子:
 
 ```java
 
@@ -1786,13 +1787,13 @@ public abstract class Place{
 
 ```
 
-这样只要调用时通过LanguageSet.Chinese这样的形式就可以直接访问其中的值.
+这样只要调用时通过LanguageSet.Chinese这样的形式就可以直接访问其中的值.
 
 享元模式具有可以容纳更多方法,更多属性的特点,适合多属性,多方法的有限取值范围使用.
 
 
-# 6. 其他
-## 6.1. 随机提供器
+# 7. 其他
+## 7.1. 随机提供器
 
 当使用随机的时候一种方法是`Utils.randomWeight()`
 另外一种提交推荐的方式是自定义业务相关接口和类
@@ -1929,13 +1930,91 @@ public class RandomGems {
 
 ```
 
-## 在旧代码基础上扩展类似功能
+## 7.2. 在旧代码基础上扩展类似功能
 
 - 利用接口的思想
 
 
-比如已有一个ABuff类,现需要增加另一种BBuff的类型,这样可以定义一个IBuff接口,让ABuff和BBuff都实现它
+比如已有一个ABuff类,现需要增加另一种BBuff的类型,这样可以定义一个IBuff接口,让ABuff和BBuff都实现它
 
 
 
-之后把接口当做一个参数, 传入之前调用的方法 内, 达到没有修改原来代码的目的
+之后把接口当做一个参数, 传入之前调用的方法 内, 达到没有修改原来代码的目的
+
+
+## 7.3. 优雅的优化5个以上的if语句
+
+```java
+		List<HeroDropItem> result = new ArrayList<>();
+		ConfHeroDropType t = store.getConfHeroDropType();   
+
+		if(t.p1!=0){
+			result.addAll(count(DropTypeEnum.parameter1, store, t.p1));
+		}
+		if(t.p2!=0){
+			result.addAll(count(DropTypeEnum.parameter2, store, t.p2));
+			
+		}
+		if(t.p3!=0){
+			result.addAll(count(DropTypeEnum.parameter3, store, t.p3));
+			
+		}
+		if(t.p4!=0){
+			result.addAll(count(DropTypeEnum.parameter4, store, t.p4));
+			
+		}
+		if(t.p5!=0){
+			result.addAll(count(DropTypeEnum.parameter5, store, t.p5));
+			
+		}
+		if(t.p6!=0){
+			result.addAll(count(DropTypeEnum.parameter6, store, t.p6));
+			
+		}
+		if(t.p7!=0){
+			result.addAll(count(DropTypeEnum.parameter7, store, t.p7));
+			
+		}
+		if(t.p8!=0){
+			result.addAll(count(DropTypeEnum.parameter8, store, t.p8));
+			
+		}
+		if(t.p9!=0){
+			result.addAll(count(DropTypeEnum.parameter9, store, t.p9));
+			
+		}
+		if(t.p10!=0){
+			result.addAll(count(DropTypeEnum.parameter10, store, t.p10));
+			
+		}
+		return result;
+
+```
+
+利用二维数组的概念,来缩短
+
+```java
+		List<HeroDropItem> result = new ArrayList<>();
+		ConfHeroDropType t = store.getConfHeroDropType();   
+        int[][] params = new int[][] { //
+                new int[] { t.p1, DropTypeEnum.parameter1.getValue()}, //
+                new int[] { t.p2, DropTypeEnum.parameter2.getValue()}, //
+                new int[] { t.p3, DropTypeEnum.parameter3.getValue()}, //
+                new int[] { t.p4, DropTypeEnum.parameter4.getValue()}, //
+                new int[] { t.p5, DropTypeEnum.parameter5.getValue()}, //
+                new int[] { t.p6, DropTypeEnum.parameter6.getValue()}, //
+                new int[] { t.p7, DropTypeEnum.parameter7.getValue()}, //
+                new int[] { t.p8, DropTypeEnum.parameter8.getValue()}, //
+                new int[] { t.p9, DropTypeEnum.parameter9.getValue()}, //
+                new int[] { t.p10, DropTypeEnum.parameter10.getValue()}, //
+        };
+
+        for (int[] ss : params) {
+            int p = ss[0];
+            int v = ss[1];
+
+            if (p != 0){
+                result.addAll(count(DropTypeEnum.of(v), store, p));
+            }
+        }
+```
